--- a/deployment/localwebhost/package.json
+++ b/deployment/localwebhost/package.json
@@ -9,7 +9,7 @@
       "node": ">=20"
     },
     "scripts": {
-      "start": "node src/index.mjs"
+      "start": "node src/index.js"
     },
     "dependencies": {
       "express": "^4.19.2"
