--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "buildRelease": "next build"
   },
   "dependencies": {
+    "@mapbox/rehype-prism": "^0.9.0",
     "gray-matter": "^4.0.3",
     "next": "^14.1.0",
     "react": "^18.2.0",
