--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.2",
+    "@types/react": "18.2.73",
     "gray-matter": "^4.0.3",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-html": "^16.0.1",
-    "remark-prism": "^1.3.6"
+    "remark-prism": "^1.3.6",
+    "typescript": "^5.4.3"
   }
 }
