--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apisandclients",
   "version": "1.0.0",
-  "description": "The content for my blog at https://apisandclients.io",
+  "description": "The content for my blog at https://apisandclients.com",
   "keywords": [],
   "author": "Gary Archer",
   "license": "MIT",
