--- a/package.json
+++ b/package.json
@@ -14,17 +14,14 @@
     "buildRelease": "next build"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
     "@types/node": "20.12.2",
     "@types/react": "18.2.73",
     "gray-matter": "^4.0.3",
-    "remark": "^15.0.1",
-    "remark-gfm": "^4.0.0",
-    "remark-html": "^16.0.1",
+    "next": "^14.1.0",
+    "next-mdx-remote": "^4.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "remark-gfm": "3.0.1",
     "remark-prism": "^1.3.6",
     "typescript": "^5.4.3"
   }
