--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "buildRelease": "next build"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.0",
+    "@types/mdx": "^2.0.13",
     "@types/node": "20.12.2",
     "@types/react": "18.2.73",
     "gray-matter": "^4.0.3",
     "next": "^14.1.0",
-    "next-mdx-remote": "^4.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remark-gfm": "3.0.1",
