--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "@types/mdx": "^2.0.13",
     "@types/node": "20.12.2",
     "@types/react": "18.2.73",
-    "gray-matter": "^4.0.3",
     "next": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remark-gfm": "3.0.1",
+    "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
     "typescript": "^5.4.3"
   }
