--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.0",
+    "@next/mdx": "^14.2.3",
     "@types/mdx": "^2.0.13",
     "@types/node": "20.12.2",
-    "@types/react": "18.2.73",
-    "next": "^14.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@types/react": "^18.2.73",
+    "next": "^14.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "remark-gfm": "^4.0.0",
     "remark-prism": "^1.3.6",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.5"
   }
 }
