--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/mdx": "^2.0.13",
     "@types/node": "20.12.2",
     "@types/react": "^18.2.73",
+    "fs-extra": "^11.2.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
