--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "buildRelease": "next build"
   },
   "dependencies": {
-    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.3",
+    "@types/mdx": "^2.0.13",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "20.12.2",
     "@types/react": "^18.2.73",
